[package]
name = "RustSampler"
version = "0.1.0"
edition = "2021"
authors = ["David Jones <davidisjones10@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/SonyaInSiberia/SAE2024_Final/tree/RustSamplerVST-DJ"
description = "A sampler in Rust"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }
hound = "3.5.1"
sofiza = "0.3.1"
image = "0.25.1"
egui_file = { path = "egui_file-main"}
homedir = "0.2.1"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"